--- a/print.html
+++ b/print.html
@@ -156,15 +156,15 @@
 <p><img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual" /></p>
 <p><a href="https://bhikkhu-manual.github.io">https://bhikkhu-manual.github.io</a></p>
 <h2><a class="header" href="#downlads" id="downlads">Downlads</a></h2>
-<p><strong>Bhikkhu Manual</strong></p>
+<p><strong>Bhikkhu Manual, Handbook</strong></p>
 <ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual.pdf">PDF, handbook size</a></li>
+<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF, handbook size</a></li>
 </ul>
-<p><strong>Combined Chanting Reference</strong></p>
+<p><strong>Bhikkhu Manual, Combined Chanting Reference</strong></p>
 <ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Combined-Chanting.pdf">PDF for desktop and printing, A5 size</a></li>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Combined-Chanting.epub">EPUB for phones and tablets</a></li>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Combined-Chanting.mobi">MOBI for Kindle</a></li>
+<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Combined-Chanting.pdf">PDF for desktop and printing, A5 size</a></li>
+<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Combined-Chanting.epub">EPUB for phones and tablets</a></li>
+<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Combined-Chanting.mobi">MOBI for Kindle</a></li>
 </ul>
 <h2><a class="header" href="#further-references" id="further-references">Further references</a></h2>
 <p><strong>Discipline and Conventions of the Theravada Forest Tradition</strong> by Ajahn Sucitto</p>
