--- a/chants/evening-chanting.html
+++ b/chants/evening-chanting.html
@@ -170,11 +170,33 @@ Saṅghaṃ namāmi</p>
 <p>[Yam-amha kho mayaṃ bhagavantaṃ saraṇaṃ gatā, uddissa pabbajitā yo no bhagavā
 satthā, yassa ca mayaṃ bhagavato dhammaṃ rocema</p>
 <p>Imehi sakkārehi taṃ bhagavantaṃ sasaddhammaṃ sasāvaka-saṅghaṃ abhipūjayāma.]</p>
+<h2><a class="header" href="#dedication-of-offerings-english" id="dedication-of-offerings-english">Dedication of Offerings (English)</a></h2>
+<p>[To the Blessed One,] the Lord, who fully attained<br />
+perfect enlightenment,<br />
+To the Teaching, which he expounded so well,<br />
+And to the Blessed One’s disciples who have practised well,<br />
+To these --- the Buddha, the Dhamma, and the Saṅgha ---<br />
+We render with offerings our rightful homage.<br />
+It is well for us that the Blessed One, having attained liberation,<br />
+Still had compassion for later generations.<br />
+May these simple offerings be accepted<br />
+For our long-lasting benefit and for the happiness it gives us.<br />
+The Lord, the Perfectly Enlightened and Blessed One ---<br />
+I render homage to the Buddha, the Blessed One.</p>
+<p>[The Teaching,] so completely explained by him ---<br />
+I bow to the Dhamma.</p>
+<p>[The Blessed One’s disciples,] who have practised well ---<br />
+I bow to the Saṅgha.</p>
 <h2><a class="header" href="#preliminary-homage" id="preliminary-homage">Preliminary Homage</a></h2>
 <blockquote>
 <p>[Handa mayaṃ buddhassa bhagavato pubbabhāga-namakāraṃ karomase]</p>
 </blockquote>
 <p>Namo tassa bhagavato arahato sammāsambuddhassa (×3)</p>
+<h2><a class="header" href="#preliminary-homage-english" id="preliminary-homage-english">Preliminary Homage (English)</a></h2>
+<blockquote>
+<p>[Now let us pay preliminary homage to the Buddha.]</p>
+</blockquote>
+<p>Homage to the Blessed, Noble, and Perfectly Enlightened One. (×3)</p>
 <h2><a class="header" href="#recollection-of-the-buddha" id="recollection-of-the-buddha">Recollection of the Buddha</a></h2>
 <blockquote>
 <p>[Handa mayaṃ buddhānussatinayaṃ karomase]</p>
@@ -183,6 +205,17 @@ satthā, yassa ca mayaṃ bhagavato dhammaṃ rocema</p>
 Itipi so bhagavā arahaṃ sammāsambuddho<br />
 Vijjācaraṇa-sampanno sugato lokavidū<br />
 Anuttaro purisadamma-sārathi satthā deva-manussānaṃ buddho bhagavā’ti</p>
+<h2><a class="header" href="#recollection-of-the-buddha-english" id="recollection-of-the-buddha-english">Recollection of the Buddha (English)</a></h2>
+<blockquote>
+<p>[Now let us chant the recollection of the Buddha.]</p>
+</blockquote>
+<p>A good word of the Blessed One’s reputation has spread as follows:<br />
+He, the Blessed One, is indeed the Pure One,<br />
+the Perfectly Enlightened One;<br />
+He is impeccable in conduct and understanding,<br />
+the Accomplished One, the Knower of the Worlds;<br />
+He trains perfectly those who wish to be trained;<br />
+he is Teacher of gods and humans; he is Awake and Holy.</p>
 <h2><a class="header" href="#supreme-praise-of-the-buddha" id="supreme-praise-of-the-buddha">Supreme Praise of the Buddha</a></h2>
 <blockquote>
 <p>[Handa mayaṃ buddhābhigītiṃ karomase]</p>
@@ -210,6 +243,35 @@ Sabbepi antarāyā me māhesuṃ tassa tejasā</p>
 Buddhe kukammaṃ pakataṃ mayā yaṃ<br />
 Buddho paṭiggaṇhātu accayantaṃ<br />
 Kālantare saṃvarituṃ va buddhe</p>
+<h2><a class="header" href="#supreme-praise-of-the-buddha-english" id="supreme-praise-of-the-buddha-english">Supreme Praise of the Buddha (English)</a></h2>
+<blockquote>
+<p>[Now let us chant the supreme praise of the Buddha.]</p>
+</blockquote>
+<p>The Buddha, the truly worthy one, endowed with<br />
+such excellent qualities,<br />
+Whose being is composed of purity, transcendental wisdom,<br />
+and compassion,<br />
+Who has enlightened the wise like the sun awakening the lotus ---<br />
+I bow my head to that peaceful chief of conquerors.<br />
+The Buddha, who is the safe, secure refuge of all beings ---<br />
+As the First Object of Recollection, I venerate him with bowed head.<br />
+I am indeed the Buddha’s servant, the Buddha is my Lord and Guide.<br />
+The Buddha is sorrow’s destroyer, who bestows blessings on me.<br />
+To the Buddha I dedicate this body and life,<br />
+And in devotion I will walk the Buddha’s Path of Awakening.<br />
+For me there is no other refuge, the Buddha is my excellent refuge.<br />
+By the utterance of this Truth, may I grow in the Master’s Way.<br />
+By my devotion to the Buddha, and the blessing of this practice ---<br />
+By its power, may all obstacles be overcome.</p>
+<div class="instr">
+<blockquote>
+<p>(Bowing)</p>
+</blockquote>
+</div>
+<p>By body, speech, or mind,<br />
+For whatever wrong action I have committed towards the Buddha,<br />
+May my acknowledgement of fault be accepted,<br />
+That in future there may be restraint regarding the Buddha.</p>
 <h2><a class="header" href="#recollection-of-the-dhamma" id="recollection-of-the-dhamma">Recollection of the Dhamma</a></h2>
 <blockquote>
 <p>[Handa mayaṃ dhammānussatinayaṃ karomase]</p>
@@ -217,6 +279,13 @@ Kālantare saṃvarituṃ va buddhe</p>
 <p>Svākkhāto bhagavatā dhammo<br />
 Sandiṭṭhiko akāliko ehipassiko<br />
 Opanayiko paccattaṃ veditabbo viññūhī’ti</p>
+<h2><a class="header" href="#recollection-of-the-dhamma-english" id="recollection-of-the-dhamma-english">Recollection of the Dhamma (English)</a></h2>
+<blockquote>
+<p>[Now let us chant the recollection of the Dhamma.]</p>
+</blockquote>
+<p>The Dhamma is well expounded by the Blessed One,<br />
+Apparent here and now, timeless, encouraging investigation,<br />
+Leading inwards, to be experienced individually by the wise.</p>
 <h2><a class="header" href="#supreme-praise-of-the-dhamma" id="supreme-praise-of-the-dhamma">Supreme Praise of the Dhamma</a></h2>
 <blockquote>
 <p>[Handa mayaṃ dhammābhigītiṃ karomase]</p>
@@ -244,6 +313,33 @@ Sabbepi antarāyā me māhesuṃ tassa tejasā</p>
 Dhamme kukammaṃ pakataṃ mayā yaṃ<br />
 Dhammo paṭiggaṇhātu accayantaṃ<br />
 Kālantare saṃvarituṃ va dhamme</p>
+<h2><a class="header" href="#supreme-praise-of-the-dhamma-english" id="supreme-praise-of-the-dhamma-english">Supreme Praise of the Dhamma (English)</a></h2>
+<blockquote>
+<p>[Now let us chant the supreme praise of the Dhamma.]</p>
+</blockquote>
+<p>It is excellent because it is `well expounded,’<br />
+And it can be divided into Path and Fruit, Learning and Liberation.<br />
+The Dhamma holds those who uphold it from falling into delusion.<br />
+I revere the excellent Teaching, that which removes darkness ---<br />
+The Dhamma, which is the supreme, secure refuge of all beings ---<br />
+As the Second Object of Recollection, I venerate it with bowed head.<br />
+I am indeed the Dhamma’s servant, the Dhamma is my Lord and Guide.<br />
+The Dhamma is sorrow’s destroyer, and it bestows blessings on me.<br />
+To the Dhamma I dedicate this body and life,<br />
+And in devotion I will walk this excellent way of Truth.<br />
+For me there is no other refuge, the Dhamma is my excellent refuge.<br />
+By the utterance of this Truth, may I grow in the Master’s Way.<br />
+By my devotion to the Dhamma, and the blessing of this practice ---<br />
+By its power, may all obstacles be overcome.</p>
+<div class="instr">
+<blockquote>
+<p>(Bowing)</p>
+</blockquote>
+</div>
+<p>By body, speech, or mind,<br />
+For whatever wrong action I have committed towards the Dhamma,<br />
+May my acknowledgement of fault be accepted,<br />
+That in future there may be restraint regarding the Dhamma.</p>
 <h2><a class="header" href="#recollection-of-the-saṅgha" id="recollection-of-the-saṅgha">Recollection of the Saṅgha</a></h2>
 <blockquote>
 <p>[Handa mayaṃ saṅghānussatinayaṃ karomase]</p>
@@ -256,6 +352,19 @@ Yadidaṃ cattāri purisayugāni aṭṭha purisapuggalā<br />
 Esa bhagavato sāvakasaṅgho<br />
 Āhuneyyo pāhuneyyo dakkhiṇeyyo añjali-karaṇīyo<br />
 Anuttaraṃ puññakkhettaṃ lokassā’ti</p>
+<h2><a class="header" href="#recollection-of-the-saṅgha-english" id="recollection-of-the-saṅgha-english">Recollection of the Saṅgha (English)</a></h2>
+<blockquote>
+<p>[Now let us chant the recollection of the Saṅgha.]</p>
+</blockquote>
+<p>They are the Blessed One’s disciples, who have practised well,<br />
+Who have practised directly,<br />
+Who have practised insightfully,<br />
+Those who practise with integrity ---<br />
+That is the four pairs, the eight kinds of noble beings ---<br />
+These are the Blessed One’s disciples.<br />
+Such ones are worthy of gifts, worthy of hospitality,<br />
+worthy of offerings, worthy of respect;<br />
+They give occasion for incomparable goodness to arise in the world.</p>
 <h2><a class="header" href="#supreme-praise-of-the-saṅgha" id="supreme-praise-of-the-saṅgha">Supreme Praise of the Saṅgha</a></h2>
 <blockquote>
 <p>[Handa mayaṃ saṅghābhigītiṃ karomase]</p>
@@ -283,6 +392,33 @@ Sabbepi antarāyā me māhesuṃ tassa tejasā</p>
 Saṅghe kukammaṃ pakataṃ mayā yaṃ<br />
 Saṅgho paṭiggaṇhātu accayantaṃ<br />
 Kālantare saṃvarituṃ va saṅghe</p>
+<h2><a class="header" href="#supreme-praise-of-the-saṅgha-english" id="supreme-praise-of-the-saṅgha-english">Supreme Praise of the Saṅgha (English)</a></h2>
+<blockquote>
+<p>[Now let us chant the supreme praise of the Saṅgha.]</p>
+</blockquote>
+<p>Born of the Dhamma, that Saṅgha which has practised well,<br />
+The field of the Saṅgha formed of eight kinds of noble beings,<br />
+Guided in body and mind by excellent morality and virtue.<br />
+I revere that assembly of noble beings perfected in purity.<br />
+The Saṅgha, which is the supreme, secure refuge of all beings ---<br />
+As the Third Object of Recollection, I venerate it with bowed head.</p>
+<p>I am indeed the Saṅgha’s servant, the Saṅgha is my Lord and Guide.<br />
+The Saṅgha is sorrow’s destroyer and it bestows blessings on me.<br />
+To the Saṅgha I dedicate this body and life,<br />
+And in devotion I will walk the well-practised way of the Saṅgha.<br />
+For me there is no other refuge, the Saṅgha is my excellent refuge.<br />
+By the utterance of this Truth, may I grow in the Master’s Way.<br />
+By my devotion to the Saṅgha, and the blessing of this practice ---<br />
+By its power, may all obstacles be overcome.</p>
+<div class="instr">
+<blockquote>
+<p>(Bowing)</p>
+</blockquote>
+</div>
+<p>By body, speech, or mind,<br />
+For whatever wrong action I have committed towards the Saṅgha,<br />
+May my acknowledgement of fault be accepted,<br />
+That in future there may be restraint regarding the Saṅgha.</p>
 <h2><a class="header" href="#closing-homage" id="closing-homage">Closing Homage</a></h2>
 <p>[Arahaṃ] sammāsambuddho bhagavā<br />
 Buddhaṃ bhagavantaṃ abhivādemi</p>
@@ -290,6 +426,13 @@ Buddhaṃ bhagavantaṃ abhivādemi</p>
 Dhammaṃ namassāmi</p>
 <p>[Supaṭipanno] bhagavato sāvakasaṅgho<br />
 Saṅghaṃ namāmi</p>
+<h2><a class="header" href="#closing-homage-english" id="closing-homage-english">Closing Homage (English)</a></h2>
+<p>[The Lord,] the Perfectly Enlightened and Blessed One ---<br />
+I render homage to the Buddha, the Blessed One.</p>
+<p>[The Teaching,] so completely explained by him ---<br />
+I bow to the Dhamma.</p>
+<p>[The Blessed One’s disciples,] who have practised well ---<br />
+I bow to the Saṅgha.</p>
 
                     </main>
 
