--- a/chants/reflections.html
+++ b/chants/reflections.html
@@ -229,6 +229,16 @@ Maraṇa-dhammāmhi maraṇaṃ anatītā</p>
 Yaṃ kammaṃ karissāmi, kalyāṇaṃ vā pāpakaṃ vā, tassa dāyādā bhavissāmi</p>
 <p>Evaṃ amhehi abhiṇhaṃ paccavekkhitabbaṃ</p>
 <p><em>A.III.71f</em></p>
+<h2><a class="header" href="#five-subjects-for-frequent-recollection-english" id="five-subjects-for-frequent-recollection-english">Five Subjects for Frequent Recollection (English)</a></h2>
+<p>I am of the nature to age, I have not gone beyond ageing.</p>
+<p>I am of the nature to sicken, I have not gone beyond sickness.</p>
+<p>I am of the nature to die, I have not gone beyond dying.</p>
+<p>All that is mine, beloved and pleasing,<br />
+will become otherwise, will become separated from me.</p>
+<p>I am the owner of my kamma, heir to my kamma, born of my kamma,<br />
+related to my kamma, abide supported by my kamma.<br />
+Whatever kamma I shall do, for good or for ill, of that I will be the heir.</p>
+<p>Thus we should frequently recollect.</p>
 <h2><a class="header" href="#ten-subjects-for-frequent-recollectiona-iddasa-ime-bhikkhavea" id="ten-subjects-for-frequent-recollectiona-iddasa-ime-bhikkhavea">Ten Subjects for Frequent Recollection<a id="dasa-ime-bhikkhave"></a></a></h2>
 <blockquote>
 <p>[Handa mayaṃ pabbajita-abhiṇha-paccavekkhaṇa-pāṭhaṃ bhaṇāmase]</p>
