--- a/chants/morning-chanting.html
+++ b/chants/morning-chanting.html
@@ -170,11 +170,32 @@ Saṅghaṃ namāmi</p>
 <p>[Yam-amha kho mayaṃ bhagavantaṃ saraṇaṃ gatā, uddissa pabbajitā yo no bhagavā
 satthā, yassa ca mayaṃ bhagavato dhammaṃ rocema</p>
 <p>Imehi sakkārehi taṃ bhagavantaṃ sasaddhammaṃ sasāvakasaṅghaṃ abhipūjayāma.]</p>
+<h2><a class="header" href="#dedication-of-offerings-english" id="dedication-of-offerings-english">Dedication of Offerings (English)</a></h2>
+<p>To the Blessed One, the Lord, who fully attained perfect enlightenment,<br />
+To the Teaching which he expounded so well,<br />
+And to the Blessed One’s disciples who have practised well,<br />
+To these --- the Buddha, the Dhamma, and the Saṅgha ---<br />
+We render with offerings our rightful homage.<br />
+It is well for us that the Blessed One, having attained liberation,<br />
+Still had compassion for later generations.<br />
+May these simple offerings be accepted<br />
+For our long-lasting benefit and for the happiness it gives us.</p>
+<p>The Lord, the Perfectly Enlightened and Blessed One ---<br />
+I render homage to the Buddha, the Blessed One.</p>
+<p>The Teaching so completely explained by him ---<br />
+I bow to the Dhamma.</p>
+<p>The Blessed One’s disciples who have practised well ---<br />
+I bow to the Saṅgha.</p>
 <h2><a class="header" href="#preliminary-homage" id="preliminary-homage">Preliminary Homage</a></h2>
 <blockquote>
 <p>[Handa mayaṃ buddhassa bhagavato pubbabhāga-namakāraṃ karomase]</p>
 </blockquote>
 <p>Namo tassa bhagavato arahato sammāsambuddhassa (×3)</p>
+<h2><a class="header" href="#preliminary-homage-english" id="preliminary-homage-english">Preliminary Homage (English)</a></h2>
+<blockquote>
+<p>[Now let us pay preliminary homage to the Buddha.]</p>
+</blockquote>
+<p>Homage to the Blessed, Noble, and Perfectly Enlightened One. (×3)</p>
 <h2><a class="header" href="#homage-to-the-buddha" id="homage-to-the-buddha">Homage to the Buddha</a></h2>
 <blockquote>
 <p>[Handa mayaṃ buddhābhitthutiṃ karomase]</p>
@@ -188,6 +209,22 @@ Sassamaṇa-brāhmaṇiṃ pajaṃ sadeva-manussaṃ sayaṃ abhiññā sacchika
 Yo dhammaṃ desesi ādi-kalyāṇaṃ majjhe-kalyāṇaṃ pariyosāna-kalyāṇaṃ<br />
 Sātthaṃ sabyañjanaṃ kevala-paripuṇṇaṃ parisuddhaṃ brahma-cariyaṃ pakāsesi<br />
 Tam-ahaṃ bhagavantaṃ abhipūjayāmi tam-ahaṃ bhagavantaṃ sirasā namāmi</p>
+<h2><a class="header" href="#homage-to-the-buddha-english" id="homage-to-the-buddha-english">Homage to the Buddha (English)</a></h2>
+<blockquote>
+<p>[Now let us chant in praise of the Buddha.]</p>
+</blockquote>
+<p>The Tathāgata is the Pure One, the Perfectly Enlightened One.<br />
+He is impeccable in conduct and understanding,<br />
+The Accomplished One,<br />
+The Knower of the Worlds.<br />
+He trains perfectly those who wish to be trained.<br />
+He is Teacher of gods and humans.<br />
+He is awake and holy.<br />
+In this world with its gods, demons, and kind spirits,<br />
+Its seekers and sages, celestial and human beings, he has by deep insight revealed the Truth.<br />
+He has pointed out the Dhamma: beautiful in the beginning, beautiful in the middle, beautiful in the end.<br />
+He has explained the Spiritual Life of complete purity in its essence and conventions.<br />
+I chant my praise to the Blessed One, I bow my head to the Blessed One.</p>
 <h2><a class="header" href="#homage-to-the-dhamma" id="homage-to-the-dhamma">Homage to the Dhamma</a></h2>
 <blockquote>
 <p>[Handa mayaṃ dhammābhitthutiṃ karomase]</p>
@@ -196,6 +233,17 @@ Tam-ahaṃ bhagavantaṃ abhipūjayāmi tam-ahaṃ bhagavantaṃ sirasā namāmi
 Sandiṭṭhiko, akāliko, ehipassiko, opanayiko<br />
 Paccattaṃ veditabbo viññūhi<br />
 Tam-ahaṃ dhammaṃ abhipūjayāmi tam-ahaṃ dhammaṃ sirasā namāmi</p>
+<h2><a class="header" href="#homage-to-the-dhamma-english" id="homage-to-the-dhamma-english">Homage to the Dhamma (English)</a></h2>
+<blockquote>
+<p>[Now let us chant in praise of the Dhamma.]</p>
+</blockquote>
+<p>The Dhamma is well expounded by the Blessed One,<br />
+Apparent here and now,<br />
+Timeless,<br />
+Encouraging investigation,<br />
+Leading inwards,<br />
+To be experienced individually by the wise.<br />
+I chant my praise to this Teaching, I bow my head to this Truth.</p>
 <h2><a class="header" href="#homage-to-the-saṅgha" id="homage-to-the-saṅgha">Homage to the Saṅgha</a></h2>
 <blockquote>
 <p>[Handa mayaṃ saṅghābhitthutiṃ karomase]</p>
@@ -209,6 +257,22 @@ Esa bhagavato sāvakasaṅgho<br />
 Āhuneyyo, pāhuneyyo, dakkhiṇeyyo, añjali-karaṇīyo<br />
 Anuttaraṃ puññakkhettaṃ lokassa<br />
 Tam-ahaṃ saṅghaṃ abhipūjayāmi tam-ahaṃ saṅghaṃ sirasā namāmi</p>
+<h2><a class="header" href="#homage-to-the-saṅgha-english" id="homage-to-the-saṅgha-english">Homage to the Saṅgha (English)</a></h2>
+<blockquote>
+<p>[Now let us chant in praise of the Saṅgha.]</p>
+</blockquote>
+<p>They are the Blessed One’s disciples, who have practised well,<br />
+Who have practised directly,<br />
+Who have practised insightfully,<br />
+Those who practise with integrity ---<br />
+That is the four pairs, the eight kinds of noble beings ---<br />
+These are the Blessed One’s disciples.<br />
+Such ones are worthy of gifts,<br />
+Worthy of hospitality,<br />
+Worthy of offerings,<br />
+Worthy of respect;<br />
+They give occasion for incomparable goodness to arise in the world.<br />
+I chant my praise to this Saṅgha, I bow my head to this Saṅgha.</p>
 <h2><a class="header" href="#salutation-to-the-triple-gema-idbuddho-susuddhoa" id="salutation-to-the-triple-gema-idbuddho-susuddhoa">Salutation to the Triple Gem<a id="buddho-susuddho"></a></a></h2>
 <blockquote>
 <p>[Handa mayaṃ ratanattaya-paṇāma-gāthāyo c’eva saṃvega-parikittana-pāṭhañca bhaṇāmase]</p>
@@ -269,6 +333,76 @@ Saddhā agārasmā anagāriyaṃ pabbajitā<br />
 Tasmiṃ bhagavati brahma-cariyaṃ carāma<br />
 Bhikkhūnaṃ/Sīladharānaṃ sikkhāsājīva-samāpannā<br />
 Taṃ no brahma-cariyaṃ imassa kevalassa dukkha-kkhandhassa antakiriyāya saṃvattatu</p>
+<h2><a class="header" href="#salutation-to-the-triple-gem-english" id="salutation-to-the-triple-gem-english">Salutation to the Triple Gem (English)</a></h2>
+<blockquote>
+<p>[Now let us chant our salutation to the Triple Gem and a passage to arouse urgency.]</p>
+</blockquote>
+<p>The Buddha, absolutely pure, with ocean-like compassion,<br />
+Possessing the clear sight of wisdom,<br />
+Destroyer of worldly self-corruption ---<br />
+Devotedly indeed, that Buddha I revere.<br />
+The Teaching of the Lord, like a lamp,<br />
+Illuminating the Path and its Fruit: the Deathless,<br />
+That which is beyond the conditioned world ---<br />
+Devotedly indeed, that Dhamma I revere.<br />
+The Saṅgha, the most fertile ground for cultivation,<br />
+Those who have realized peace, awakened after the Accomplished One,<br />
+Noble and wise, all longing abandoned ---<br />
+Devotedly indeed, that Saṅgha I revere.</p>
+<p>This salutation should be made to that which is worthy.<br />
+Through the power of such good action, may all obstacles disappear.<br />
+One who knows things as they are has come into this world; and he is an Arahant, a perfectly Awakened being,<br />
+Purifying the way leading out of delusion, calming and directing to perfect peace, and leading to enlightenment --- this Way he has made known.</p>
+<p>Having heard the Teaching, we know this:<br />
+Birth is dukkha,<br />
+Ageing is dukkha,<br />
+And death is dukkha;<br />
+Sorrow, lamentation, pain, grief, and despair are dukkha;<br />
+Association with the disliked is dukkha;<br />
+Separation from the liked is dukkha;<br />
+Not attaining one’s wishes is dukkha.<br />
+In brief, the five focuses of identity are dukkha.</p>
+<p>These are as follows:<br />
+Attachment to form,<br />
+Attachment to feeling,<br />
+Attachment to perception,<br />
+Attachment to mental formations,<br />
+Attachment to sense-consciousness.<br />
+For the complete understanding of this,<br />
+The Blessed One in his lifetime frequently instructed his disciples in just this way.</p>
+<p>In addition, he further instructed:<br />
+Form is impermanent,<br />
+Feeling is impermanent,<br />
+Perception is impermanent,<br />
+Mental formations are impermanent,<br />
+Sense-consciousness is impermanent;</p>
+<p>Form is not-self,<br />
+Feeling is not-self,<br />
+Perception is not-self,<br />
+Mental formations are not-self,<br />
+Sense-consciousness is not-self;<br />
+All conditions are transient,<br />
+There is no self in the created or the uncreated.<br />
+All of us are bound by birth, ageing, and death,<br />
+By sorrow, lamentation, pain, grief, and despair,<br />
+Bound by dukkha and obstructed by dukkha.<br />
+Let us all aspire to complete freedom from suffering.</p>
+<blockquote>
+<p>The following is chanted only by the monks and nuns.</p>
+</blockquote>
+<p>Remembering the Blessed One, the Noble Lord, and Perfectly Enlightened One, who long ago attained Parinibbāna,<br />
+We have gone forth with faith from home to homelessness,<br />
+And like the Blessed One, we practise the Holy Life,<br />
+Being fully equipped with the bhikkhus’/nuns’ system of training.<br />
+May this Holy Life lead us to the end of this whole mass of suffering.</p>
+<blockquote>
+<p>An alternative version of the preceding section, which can be chanted by laypeople as well.</p>
+</blockquote>
+<p>The Blessed One, who long ago attained Parinibbāna, is our refuge.<br />
+So too are the Dhamma and the Saṅgha.<br />
+Attentively we follow the pathway of that Blessed One, with all of our mindfulness and strength.<br />
+May then the cultivation of this practice<br />
+Lead us to the end of every kind of suffering.</p>
 <h2><a class="header" href="#closing-homage" id="closing-homage">Closing Homage</a></h2>
 <p>[Arahaṃ] sammāsambuddho bhagavā<br />
 Buddhaṃ bhagavantaṃ abhivādemi</p>
@@ -276,6 +410,13 @@ Buddhaṃ bhagavantaṃ abhivādemi</p>
 Dhammaṃ namassāmi</p>
 <p>[Supaṭipanno] bhagavato sāvakasaṅgho<br />
 Saṅghaṃ namāmi</p>
+<h2><a class="header" href="#closing-homage-english" id="closing-homage-english">Closing Homage (English)</a></h2>
+<p>The Lord, the Perfectly Enlightened and Blessed One ---<br />
+I render homage to the Buddha, the Blessed One.</p>
+<p>The Teaching, so completely explained by him ---<br />
+I bow to the Dhamma.</p>
+<p>The Blessed One’s disciples, who have practised well ---<br />
+I bow to the Saṅgha.</p>
 
                     </main>
 
