--- a/index.html
+++ b/index.html
@@ -154,24 +154,26 @@
 <p><img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual" /></p>
 <p><a href="https://bhikkhu-manual.github.io">https://bhikkhu-manual.github.io</a></p>
 <h2><a class="header" href="#downlads" id="downlads">Downlads</a></h2>
-<p><strong>Bhikkhu Manual Handbook: Essential Chants and Vinaya Notes</strong></p>
-<p>(A6 page size, 148mm x 105mm)</p>
+<h3><a class="header" href="#bhikkhu-manual-handbook" id="bhikkhu-manual-handbook">Bhikkhu Manual Handbook</a></h3>
+<p><strong>Essential Chants and Vinaya Notes</strong></p>
 <ul>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF</a></li>
 </ul>
-<p><strong>Bhikkhu Manual Reference: All Chants with English Translations and Vinaya Notes</strong></p>
-<p>(A5 page size, 210mm x 148mm)</p>
+<h3><a class="header" href="#bhikkhu-manual-reference" id="bhikkhu-manual-reference">Bhikkhu Manual Reference</a></h3>
+<p><strong>All Chants with English Translations and Vinaya Notes</strong></p>
 <ul>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.pdf">PDF for desktop and printing</a></li>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.epub">EPUB for phones and tablets</a></li>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.mobi">MOBI for Kindle</a></li>
 </ul>
 <h2><a class="header" href="#further-references" id="further-references">Further references</a></h2>
-<p><strong>Discipline and Conventions of the Theravada Forest Tradition</strong> by Ajahn Sucitto</p>
+<h3><a class="header" href="#discipline-and-conventions-of-the-theravada-forest-tradition" id="discipline-and-conventions-of-the-theravada-forest-tradition">Discipline and Conventions of the Theravada Forest Tradition</a></h3>
+<p>by Ajahn Sucitto</p>
 <ul>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.pdf">PDF</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.epub">EPUB</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.mobi">MOBI</a></li>
 </ul>
-<p><strong>Rituals &amp; Observances</strong> by Ajahn Sucitto and Ajahn Candasiri</p>
+<h3><a class="header" href="#rituals--observances" id="rituals--observances">Rituals &amp; Observances</a></h3>
+<p>by Ajahn Sucitto and Ajahn Candasiri</p>
 <ul>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Rituals-and-Obervances-Ajahn-Sucitto-and-Ajahn-Candasiri.pdf">PDF</a></li>
 </ul>
