--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div id="sidebar-scrollbox" class="sidebar-scrollbox">
-                <ol class="chapter"><li class="expanded affix "><a href="bhikkhu-manual.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="first-lines.html">List of First Lines</a></li><li class="expanded "><a href="essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Parittas</a></li><li class="expanded "><a href="chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="vinaya/ocean-quote.html"><strong aria-hidden="true">2.1.</strong> Quote</a></li><li class="expanded "><a href="vinaya/guidelines.html"><strong aria-hidden="true">2.2.</strong> Guidelines</a></li><li class="expanded "><a href="vinaya/requisites.html"><strong aria-hidden="true">2.3.</strong> Requisites</a></li><li class="expanded "><a href="vinaya/offences.html"><strong aria-hidden="true">2.4.</strong> Offences</a></li><li class="expanded "><a href="vinaya/uposatha.html"><strong aria-hidden="true">2.5.</strong> Uposatha</a></li><li class="expanded "><a href="vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.6.</strong> Rains and Kathina</a></li><li class="expanded "><a href="vinaya/other-procedures.html"><strong aria-hidden="true">2.7.</strong> Other Procedures</a></li><li class="expanded "><a href="vinaya/useful-notes.html"><strong aria-hidden="true">2.8.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="dhamma-quotes.html"><strong aria-hidden="true">3.2.</strong> Dhamma Quotes</a></li></ol></li><li class="expanded "><a href="copyright.html"><strong aria-hidden="true">4.</strong> Copyright</a></li></ol>
+                <ol class="chapter"><li class="expanded affix "><a href="titlepage.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="first-lines.html">List of First Lines</a></li><li class="expanded "><a href="essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Parittas</a></li><li class="expanded "><a href="chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="vinaya/ocean-quote.html"><strong aria-hidden="true">2.1.</strong> Quote</a></li><li class="expanded "><a href="vinaya/guidelines.html"><strong aria-hidden="true">2.2.</strong> Guidelines</a></li><li class="expanded "><a href="vinaya/requisites.html"><strong aria-hidden="true">2.3.</strong> Requisites</a></li><li class="expanded "><a href="vinaya/offences.html"><strong aria-hidden="true">2.4.</strong> Offences</a></li><li class="expanded "><a href="vinaya/uposatha.html"><strong aria-hidden="true">2.5.</strong> Uposatha</a></li><li class="expanded "><a href="vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.6.</strong> Rains and Kathina</a></li><li class="expanded "><a href="vinaya/other-procedures.html"><strong aria-hidden="true">2.7.</strong> Other Procedures</a></li><li class="expanded "><a href="vinaya/useful-notes.html"><strong aria-hidden="true">2.8.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="dhamma-quotes.html"><strong aria-hidden="true">3.2.</strong> Dhamma Quotes</a></li></ol></li><li class="expanded "><a href="print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="expanded "><a href="copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -150,30 +150,43 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#bhikkhu-manual" id="bhikkhu-manual">Bhikkhu Manual</a></h1>
-<p><img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual" /></p>
-<p><a href="https://bhikkhu-manual.github.io">https://bhikkhu-manual.github.io</a></p>
+                        <div class="titlepage-cover">
+  <img src="./includes/images/dhammacakka-circle_w600.jpg" alt="Bhikkhu Manual" />
+  <h1><a class="header" href="#bhikkhu-manual" id="bhikkhu-manual">Bhikkhu Manual</a></h1>
+  <a href="https://bhikkhu-manual.github.io">bhikkhu-manual.github.io</a>
+</div>
 <h2><a class="header" href="#downlads" id="downlads">Downlads</a></h2>
-<h3><a class="header" href="#bhikkhu-manual-handbook" id="bhikkhu-manual-handbook">Bhikkhu Manual Handbook</a></h3>
-<p><strong>Essential Chants and Vinaya Notes</strong></p>
-<ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF</a></li>
-</ul>
-<h3><a class="header" href="#bhikkhu-manual-reference" id="bhikkhu-manual-reference">Bhikkhu Manual Reference</a></h3>
-<p><strong>All Chants with English Translations and Vinaya Notes</strong></p>
-<ul>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.pdf">PDF for desktop and printing</a></li>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.epub">EPUB for phones and tablets</a></li>
-<li><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.mobi">MOBI for Kindle</a></li>
-</ul>
+<p><em>(NOTE: For press-quality print files and guidelines, see the <a href="./print-guide.html">Print Guide</a>)</em></p>
+<div class="grid download-item">
+  <div class="col-1-3 item-cover">
+    <img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual Handbook" />
+  </div>
+  <div class="col-2-3 item-description">
+    <h3><a class="header" href="#bhikkhu-manual-handbook" id="bhikkhu-manual-handbook">Bhikkhu Manual Handbook</a></h3>
+    <p><em>Essential Chants and Vinaya Notes</em></p>
+    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF</a></p>
+  </div>
+</div>
+<div class="grid download-item">
+  <div class="col-1-3 item-cover">
+    <img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual Reference" />
+  </div>
+  <div class="col-2-3 item-description">
+    <h3><a class="header" href="#bhikkhu-manual-reference" id="bhikkhu-manual-reference">Bhikkhu Manual Reference</a></h3>
+    <p><em>All Chants with English Translations and Vinaya Notes</em></p>
+    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.pdf">PDF for desktop and office printing</a></p>
+    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.epub">EPUB for phones and tablets</a></p>
+    <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.mobi">MOBI for Kindle</a></p>
+  </div>
+</div>
 <h2><a class="header" href="#further-references" id="further-references">Further references</a></h2>
 <h3><a class="header" href="#discipline-and-conventions-of-the-theravada-forest-tradition" id="discipline-and-conventions-of-the-theravada-forest-tradition">Discipline and Conventions of the Theravada Forest Tradition</a></h3>
-<p>by Ajahn Sucitto</p>
+<p><em>by Ajahn Sucitto</em></p>
 <ul>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.pdf">PDF</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.epub">EPUB</a>, <a href="https://bhikkhu-manual.github.io/includes/docs/Discipline-and-Conventions-Ajahn-Sucitto.mobi">MOBI</a></li>
 </ul>
 <h3><a class="header" href="#rituals--observances" id="rituals--observances">Rituals &amp; Observances</a></h3>
-<p>by Ajahn Sucitto and Ajahn Candasiri</p>
+<p><em>by Ajahn Sucitto and Ajahn Candasiri</em></p>
 <ul>
 <li><a href="https://bhikkhu-manual.github.io/includes/docs/Rituals-and-Obervances-Ajahn-Sucitto-and-Ajahn-Candasiri.pdf">PDF</a></li>
 </ul>
