--- a/titlepage.html
+++ b/titlepage.html
@@ -151,7 +151,7 @@
                 <div id="content" class="content">
                     <main>
                         <div class="titlepage-cover">
-  <img src="./includes/images/dhammacakka-circle_w600.jpg" alt="Bhikkhu Manual" />
+  <img src="./includes/images/dhammacakka-circle_w300.png" alt="Bhikkhu Manual" />
   <h1><a class="header" href="#bhikkhu-manual" id="bhikkhu-manual">Bhikkhu Manual</a></h1>
   <a href="https://bhikkhu-manual.github.io">bhikkhu-manual.github.io</a>
 </div>
