--- a/chants/morning-chanting.html
+++ b/chants/morning-chanting.html
@@ -387,17 +387,21 @@ All of us are bound by birth, ageing, and death,<br />
 By sorrow, lamentation, pain, grief, and despair,<br />
 Bound by dukkha and obstructed by dukkha.<br />
 Let us all aspire to complete freedom from suffering.</p>
+<div class="instr">
 <blockquote>
 <p>The following is chanted only by the monks and nuns.</p>
 </blockquote>
+</div>
 <p>Remembering the Blessed One, the Noble Lord, and Perfectly Enlightened One, who long ago attained Parinibbāna,<br />
 We have gone forth with faith from home to homelessness,<br />
 And like the Blessed One, we practise the Holy Life,<br />
 Being fully equipped with the bhikkhus’/nuns’ system of training.<br />
 May this Holy Life lead us to the end of this whole mass of suffering.</p>
+<div class="instr">
 <blockquote>
 <p>An alternative version of the preceding section, which can be chanted by laypeople as well.</p>
 </blockquote>
+</div>
 <p>The Blessed One, who long ago attained Parinibbāna, is our refuge.<br />
 So too are the Dhamma and the Saṅgha.<br />
 Attentively we follow the pathway of that Blessed One, with all of our mindfulness and strength.<br />
