--- a/print.html
+++ b/print.html
@@ -164,17 +164,17 @@
     <img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual Handbook" />
   </div>
   <div class="col-2-3 item-description">
-    <h3><a class="header" href="#bhikkhu-manual-handbook" id="bhikkhu-manual-handbook">Bhikkhu Manual Handbook</a></h3>
+    <h3><a class="header" href="#bhikkhu-manual-handbook-edition" id="bhikkhu-manual-handbook-edition">Bhikkhu Manual Handbook Edition</a></h3>
     <p><em>Essential Chants and Vinaya Notes</em></p>
     <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF</a></p>
   </div>
 </div>
 <div class="grid download-item">
   <div class="col-1-3 item-cover">
-    <img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual Reference" />
+    <img src="./includes/images/reference-cover.png" alt="Bhikkhu Manual Reference" />
   </div>
   <div class="col-2-3 item-description">
-    <h3><a class="header" href="#bhikkhu-manual-reference" id="bhikkhu-manual-reference">Bhikkhu Manual Reference</a></h3>
+    <h3><a class="header" href="#bhikkhu-manual-reference-edition" id="bhikkhu-manual-reference-edition">Bhikkhu Manual Reference Edition</a></h3>
     <p><em>All Chants with English Translations and Vinaya Notes</em></p>
     <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.pdf">PDF for desktop and office printing</a></p>
     <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.epub">EPUB for phones and tablets</a></p>
@@ -438,17 +438,21 @@ All of us are bound by birth, ageing, and death,<br />
 By sorrow, lamentation, pain, grief, and despair,<br />
 Bound by dukkha and obstructed by dukkha.<br />
 Let us all aspire to complete freedom from suffering.</p>
+<div class="instr">
 <blockquote>
 <p>The following is chanted only by the monks and nuns.</p>
 </blockquote>
+</div>
 <p>Remembering the Blessed One, the Noble Lord, and Perfectly Enlightened One, who long ago attained Parinibbāna,<br />
 We have gone forth with faith from home to homelessness,<br />
 And like the Blessed One, we practise the Holy Life,<br />
 Being fully equipped with the bhikkhus’/nuns’ system of training.<br />
 May this Holy Life lead us to the end of this whole mass of suffering.</p>
+<div class="instr">
 <blockquote>
 <p>An alternative version of the preceding section, which can be chanted by laypeople as well.</p>
 </blockquote>
+</div>
 <p>The Blessed One, who long ago attained Parinibbāna, is our refuge.<br />
 So too are the Dhamma and the Saṅgha.<br />
 Attentively we follow the pathway of that Blessed One, with all of our mindfulness and strength.<br />
