--- a/titlepage.html
+++ b/titlepage.html
@@ -162,17 +162,17 @@
     <img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual Handbook" />
   </div>
   <div class="col-2-3 item-description">
-    <h3><a class="header" href="#bhikkhu-manual-handbook" id="bhikkhu-manual-handbook">Bhikkhu Manual Handbook</a></h3>
+    <h3><a class="header" href="#bhikkhu-manual-handbook-edition" id="bhikkhu-manual-handbook-edition">Bhikkhu Manual Handbook Edition</a></h3>
     <p><em>Essential Chants and Vinaya Notes</em></p>
     <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Handbook.pdf">PDF</a></p>
   </div>
 </div>
 <div class="grid download-item">
   <div class="col-1-3 item-cover">
-    <img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual Reference" />
+    <img src="./includes/images/reference-cover.png" alt="Bhikkhu Manual Reference" />
   </div>
   <div class="col-2-3 item-description">
-    <h3><a class="header" href="#bhikkhu-manual-reference" id="bhikkhu-manual-reference">Bhikkhu Manual Reference</a></h3>
+    <h3><a class="header" href="#bhikkhu-manual-reference-edition" id="bhikkhu-manual-reference-edition">Bhikkhu Manual Reference Edition</a></h3>
     <p><em>All Chants with English Translations and Vinaya Notes</em></p>
     <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.pdf">PDF for desktop and office printing</a></p>
     <p><a href="https://bhikkhu-manual.github.io/includes/docs/Bhikkhu-Manual-Reference.epub">EPUB for phones and tablets</a></p>
