--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <p><em>(NOTE: For press-quality print files and guidelines, see the <a href="./print-guide.html">Print Guide</a>)</em></p>
 <div class="grid download-item">
   <div class="col-1-3 item-cover">
-    <img src="./includes/images/handbook-cover.png" alt="Bhikkhu Manual Handbook" />
+    <img src="./includes/images/handbook-cover.jpg" alt="Bhikkhu Manual Handbook" />
   </div>
   <div class="col-2-3 item-description">
     <h3><a class="header" href="#bhikkhu-manual-handbook-edition" id="bhikkhu-manual-handbook-edition">Bhikkhu Manual Handbook Edition</a></h3>
@@ -169,7 +169,7 @@
 </div>
 <div class="grid download-item">
   <div class="col-1-3 item-cover">
-    <img src="./includes/images/reference-cover.png" alt="Bhikkhu Manual Reference" />
+    <img src="./includes/images/reference-cover.jpg" alt="Bhikkhu Manual Reference" />
   </div>
   <div class="col-2-3 item-description">
     <h3><a class="header" href="#bhikkhu-manual-reference-edition" id="bhikkhu-manual-reference-edition">Bhikkhu Manual Reference Edition</a></h3>
