--- a/chants/reflections.html
+++ b/chants/reflections.html
@@ -246,7 +246,7 @@ Whatever kamma I shall do, for good or for ill, of that I will be the heir.</p>
 <p>[Dasa ime bhikkhave] dhammā pabbajitena abhiṇhaṃ paccavekkhitabbā, katame dasa</p>
 <div class="english">
 <blockquote>
-<p>Bhikkhus, there are ten dhammas which should be reflected upon again and again
+<p>Bhikkhus, there are ten dhammas which should be reflected upon, again and again,
 by one who has gone forth. What are these ten?</p>
 </blockquote>
 </div>
@@ -254,7 +254,7 @@ by one who has gone forth. What are these ten?</p>
 <div class="english">
 <blockquote>
 <p>‘I am no longer living according to worldly aims and values.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -262,7 +262,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘My very life is sustained through the gifts of others.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -270,7 +270,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘I should strive to abandon my former habits.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -278,7 +278,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Does regret over my conduct arise in my mind?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -286,7 +286,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Could my spiritual companions find fault with my conduct?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -294,7 +294,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘All that is mine, beloved and pleasing, will become otherwise, will become separated from me.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -303,7 +303,7 @@ by one who has gone forth.</p>
 <blockquote>
 <p>‘I am the owner of my kamma, heir to my kamma, born of my kamma,<br />
 related to my kamma, abide supported by my kamma; whatever kamma I shall do, for good or for ill, of that I will be the heir.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -311,7 +311,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘The days and nights are relentlessly passing; how well am I spending my time?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -319,7 +319,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Do I delight in solitude or not?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -327,14 +327,14 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Has my practice borne fruit with freedom or insight so that at the end of my life I need not feel ashamed when questioned by my spiritual companions?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
 <p>Ime kho bhikkhave dasa dhammā pabbajitena abhiṇhaṃ paccavekkhitabbā’ti</p>
 <div class="english">
 <blockquote>
-<p>Bhikkhus, these are the ten dhammas to be reflected upon again and again by one who has gone forth.</p>
+<p>Bhikkhus, these are the ten dhammas to be reflected upon, again and again, by one who has gone forth.</p>
 </blockquote>
 </div>
 <p><em>AN 10.48</em></p>
