--- a/print.html
+++ b/print.html
@@ -161,7 +161,7 @@
 <p><em>(NOTE: For press-quality print files and guidelines, see the <a href="./print-guide.html">Print Guide</a>)</em></p>
 <div class="grid download-item">
   <div class="col-1-3 item-cover">
-    <img src="./includes/images/handbook-cover.jpg" alt="Bhikkhu Manual Handbook" />
+    <img src="./includes/images/handbook-desktop-cover.jpg" alt="Bhikkhu Manual Handbook" />
   </div>
   <div class="col-2-3 item-description">
     <h3><a class="header" href="#bhikkhu-manual-handbook-edition" id="bhikkhu-manual-handbook-edition">Bhikkhu Manual Handbook Edition</a></h3>
@@ -171,7 +171,7 @@
 </div>
 <div class="grid download-item">
   <div class="col-1-3 item-cover">
-    <img src="./includes/images/reference-cover.jpg" alt="Bhikkhu Manual Reference" />
+    <img src="./includes/images/reference-desktop-cover.jpg" alt="Bhikkhu Manual Reference" />
   </div>
   <div class="col-2-3 item-description">
     <h3><a class="header" href="#bhikkhu-manual-reference-edition" id="bhikkhu-manual-reference-edition">Bhikkhu Manual Reference Edition</a></h3>
@@ -218,9 +218,6 @@ Buddhaṃ bhagavantaṃ abhivādemi<br />
 Dhammaṃ namassāmi<br />
 [Supaṭipanno] bhagavato sāvakasaṅgho<br />
 Saṅghaṃ namāmi</p>
-<p>[Yam-amha kho mayaṃ bhagavantaṃ saraṇaṃ gatā, uddissa pabbajitā yo no bhagavā
-satthā, yassa ca mayaṃ bhagavato dhammaṃ rocema</p>
-<p>Imehi sakkārehi taṃ bhagavantaṃ sasaddhammaṃ sasāvakasaṅghaṃ abhipūjayāma.]</p>
 <h2><a class="header" href="#dedication-of-offerings-english" id="dedication-of-offerings-english">Dedication of Offerings (English)</a></h2>
 <p>To the Blessed One, the Lord, who fully attained perfect enlightenment,<br />
 To the Teaching which he expounded so well,<br />
@@ -489,9 +486,6 @@ Buddhaṃ bhagavantaṃ abhivādemi</p>
 Dhammaṃ namassāmi</p>
 <p>[Supaṭipanno] bhagavato sāvakasaṅgho<br />
 Saṅghaṃ namāmi</p>
-<p>[Yam-amha kho mayaṃ bhagavantaṃ saraṇaṃ gatā, uddissa pabbajitā yo no bhagavā
-satthā, yassa ca mayaṃ bhagavato dhammaṃ rocema</p>
-<p>Imehi sakkārehi taṃ bhagavantaṃ sasaddhammaṃ sasāvaka-saṅghaṃ abhipūjayāma.]</p>
 <h2><a class="header" href="#dedication-of-offerings-english-1" id="dedication-of-offerings-english-1">Dedication of Offerings (English)</a></h2>
 <p>[To the Blessed One,] the Lord, who fully attained<br />
 perfect enlightenment,<br />
@@ -851,7 +845,7 @@ Whatever kamma I shall do, for good or for ill, of that I will be the heir.</p>
 <p>[Dasa ime bhikkhave] dhammā pabbajitena abhiṇhaṃ paccavekkhitabbā, katame dasa</p>
 <div class="english">
 <blockquote>
-<p>Bhikkhus, there are ten dhammas which should be reflected upon again and again
+<p>Bhikkhus, there are ten dhammas which should be reflected upon, again and again,
 by one who has gone forth. What are these ten?</p>
 </blockquote>
 </div>
@@ -859,7 +853,7 @@ by one who has gone forth. What are these ten?</p>
 <div class="english">
 <blockquote>
 <p>‘I am no longer living according to worldly aims and values.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -867,7 +861,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘My very life is sustained through the gifts of others.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -875,7 +869,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘I should strive to abandon my former habits.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -883,7 +877,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Does regret over my conduct arise in my mind?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -891,7 +885,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Could my spiritual companions find fault with my conduct?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -899,7 +893,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘All that is mine, beloved and pleasing, will become otherwise, will become separated from me.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -908,7 +902,7 @@ by one who has gone forth.</p>
 <blockquote>
 <p>‘I am the owner of my kamma, heir to my kamma, born of my kamma,<br />
 related to my kamma, abide supported by my kamma; whatever kamma I shall do, for good or for ill, of that I will be the heir.’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -916,7 +910,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘The days and nights are relentlessly passing; how well am I spending my time?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -924,7 +918,7 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Do I delight in solitude or not?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
@@ -932,14 +926,14 @@ by one who has gone forth.</p>
 <div class="english">
 <blockquote>
 <p>‘Has my practice borne fruit with freedom or insight so that at the end of my life I need not feel ashamed when questioned by my spiritual companions?’<br />
-This should be reflected upon again and again<br />
+This should be reflected upon, again and again,<br />
 by one who has gone forth.</p>
 </blockquote>
 </div>
 <p>Ime kho bhikkhave dasa dhammā pabbajitena abhiṇhaṃ paccavekkhitabbā’ti</p>
 <div class="english">
 <blockquote>
-<p>Bhikkhus, these are the ten dhammas to be reflected upon again and again by one who has gone forth.</p>
+<p>Bhikkhus, these are the ten dhammas to be reflected upon, again and again, by one who has gone forth.</p>
 </blockquote>
 </div>
 <p><em>AN 10.48</em></p>
